--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.12",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.3.18",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.31",
     "eslint-config-react-app": "^7.0.1",
     "globals": "^15.8.0",
     "prettier": "^3.3.3"
